--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "react": "19.0.0-rc-02c0e824-20241028",
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "next": "15.0.2"
   },
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom"
+  },
+  "@types/node": "^20",
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
